# URL-Scrape-Bot

./: .env.example  ADVANCED_ANTI_BLOCKING.md  BING_INTEGRATION_PLAN.md  EXPLORATION_SUMMARY.txt  GOOGLE_SCRAPER_DESIGN_GUIDE.md  INTEGRATION_GUIDE.md  README.md  README_DOCUMENTATION.md  WASHDB_BOT_SCRAPER_ARCHITECTURE.md  install_service.sh  pyproject.toml  quick_restart.sh  test_bing_fetch.py  test_google_scraper.py  test_ha_browser.py  test_ha_integration.py  test_ha_urls.py  test_scrape.py  washdb-bot-logrotate
washdb-bot/: .env.dev.example  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .serp_scraper_progress.json  =0.39.0  =3.10.0  BROWSER_CACHE_FIX.md  CLAUDE.md  CLEANUP_FIXES.md  CONTRIBUTING.md  CRASH_RECOVERY.md  CRASH_RECOVERY_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT_READY.md  DX_IMPROVEMENTS_CHANGELOG.md  ENHANCED_FILTER_NOW_DEFAULT.md  ENHANCED_YP_QUICK_START.md  FIXES_APPLIED.md  GOOGLE_SCRAPER_IMPLEMENTATION_PLAN.md  GUI_INTEGRATION_COMPLETE.md  HOMEADVISOR_PIPELINE.md  HOMEADVISOR_REMOVAL_SUMMARY.md  HOMEADVISOR_TWO_PHASE_WORKFLOW.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  INTEGRATION_PLAN.md  KEYWORD_DASHBOARD_COMPLETE.md  KEYWORD_DASHBOARD_GUIDE.md  LIVE_OUTPUT_IMPLEMENTATION_GUIDE.md  LOG_MANAGEMENT.md  MULTIWORKER_GUI_ADDITIONS.py  NICEGUI_OPERATIONS_CONSOLE.md  PARALLEL_SCRAPING_GUIDE.md  PROGRESS_SUMMARY_WEEKS_1-4.md  PROJECT_STATUS.md  README.md  REPO_SWEEP_VERIFICATION.md  RESUMABLE_SITE_CRAWLER_SUMMARY.md  (+64 more)
washdb-bot/competitor_intel/: __init__.py  __main__.py  cli.py  config.py
washdb-bot/config/: llm_config.py  washdb-bot.env  washdb-standardization-browser.service  washdb-standardization.service  washdb-verification.service
washdb-bot/dashboard/: __init__.py  app.py  standardization-dashboard.service  standardization_service.py
washdb-bot/db/: __init__.py  __main__.py  batch_helpers.py  database_manager.py  discovery_citation_inserter.py  import_cities.py  import_cities_simple.py  init_db.py  models.py  populate_city_registry.py  run_migration.py  save_discoveries.py  save_to_staging.py  schema_inspector.py  update_details.py  verify_company_urls.py
washdb-bot/docs/: ARCHITECTURE.md  DB_CREDENTIALS.md  DESKTOP_LAUNCHER_SETUP.md  FIELD_MIGRATION_GUIDE.md  LOGS.md  PDF_DEPRECATION_NOTICE.md  QUICKSTART-dev.md  SAFETY_LIMITS.md  SCHEMA_REFERENCE.md  SCRIPTS.md  SEO_FINAL_IMPLEMENTATION.md  SEO_IMPLEMENTATION_SUMMARY.md  SEO_MODULES_REFERENCE.md  SERP_GUI_INTEGRATION.md  SERP_SCRAPER_SETUP.md  STORAGE_OPTIMIZATION_PLAN.md  VERIFICATION_BOT.md  WATCHDOG_IMPROVEMENTS.md  YP_STEALTH_FEATURES.md  city_registry_report.md  claude_auto_tuning_setup.md  implementation_summary.md  index.md  internal_db_schema.md  pilot_test_results.md  seo_governance_system.md  uscities_profile.md  yp_city_slug_rules.md
washdb-bot/exports/: seo_business_scrape.csv
washdb-bot/gui/: __init__.py
washdb-bot/gui_backend/: ARCHITECTURE.md  README.md  app.py  config.py  requirements.txt  run.sh
washdb-bot/models/: Modelfile.unified  verification_classifier.joblib
washdb-bot/niceui/: __init__.py  __main__.py  backend_facade.py  config_manager.py  layout.py  main.py  router.py  theme.py
washdb-bot/prompts/: business_name_extraction.txt
washdb-bot/runner/: __init__.py  logging_setup.py  main.py  memory_monitor.py  safety.py
washdb-bot/runpod_package/: runpod_train.py
washdb-bot/runpod_training/: README.md  prepare_upload.sh  requirements.txt  run.sh  train.py
washdb-bot/scheduler/: cron_service.py
washdb-bot/scrape_bing/: __init__.py  bing_config.py  bing_crawl_city_first.py  bing_filter.py  bing_parse.py  categories.csv  generate_city_targets.py
washdb-bot/scrape_google/: __init__.py  browser_pool.py  categories.csv  generate_city_targets.py  google_client.py  google_crawl_city_first.py  google_filter.py  google_parse.py  google_stealth.py  html_cache.py  state_worker_pool.py
washdb-bot/scrape_ha/: README_ZIP_CODE_MIGRATION.md  ha_client.py  ha_crawl.py  ha_crawl_city_first.py  ha_crawl_legacy.py  pipeline_stats.py  url_finder.py  url_finder_worker.py
washdb-bot/scrape_site/: __init__.py  claude_verifier.py  llm_verifier.py  resumable_crawler.py  service_verifier.py  site_parse.py  site_scraper.py  trained_llm_verifier.py
washdb-bot/scrape_yelp/: __init__.py  categories.csv  generate_city_targets.py  state_assignments.py  yelp_crawl_city_first.py  yelp_datadome_bypass.py  yelp_filter.py  yelp_parse.py  yelp_stealth.py
washdb-bot/scrape_yp/: __init__.py  browser_pool.py  city_slug.py  fetch_categories.py  generate_city_targets.py  html_cache.py  name_standardizer.py  proxy_pool.py  seed_targets.py  state_assignments.py  state_assignments_5worker.py  state_worker_pool.py  state_worker_pool_5.py  test_categories.py  worker_config.py  worker_pool.py  yp_checkpoint.py  yp_client_backup.py  yp_crawl.py  yp_crawl_city_first.py  yp_data_utils.py  yp_dedup.py  yp_filter.py  yp_monitor.py  yp_parser_enhanced.py  yp_stealth.py  yp_wal.py
washdb-bot/scripts/: backfill_embeddings.py  backfill_name_standardization.py  batch_reverify_parallel.py  batch_reverify_with_trained_llm.py  claude_batch_verify.py  claude_scrape_verify.py  clean_training_data.py  cleanup_duplicates.py  compute_evidence.py  continuous_serp_scraper.py  create_final_combined_dataset.py  create_unified_training_data.py  cron_wrapper.sh  data_retention_cleanup.py  domain_health_checker.py  enhance_training_quality.py  enrich_training_data.py  enrich_training_fast.py  evaluate_verifier.py  export_all_training_data.py  export_balanced_finetuning_data.py  export_for_review.py  export_llm_finetuning_data.py  export_verification_training_data.py  (+83 more)
(+502 files in other folders)
