[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "washdb-bot"
version = "0.1.0"
description = "A local web-scraping tool for collecting and storing business data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.0.0,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.0",
    "python-dotenv>=1.0.0",
    "tldextract>=5.0.0",
    "APScheduler>=3.10.0,<4.0.0",
    "nicegui>=1.4.0",
    "flask>=2.3.0,<4.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["db", "scrape_yp", "scrape_site", "scrape_google", "scheduler", "runner", "niceui", "tests"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
